@@ -6,14 +6,21 @@
                 indent="yes"/>
     <xsl:template name="content">
         <script type="text/javascript">
-            function toggle(id){
-              if(id.length != 0) {
-                var display = document.getElementById(id).style.display;
-                if(display == "table-row") {
-                  document.getElementById(id).style.display = "none";
+            function toggleResult(id){
+              if (id.length != 0) {
+                var resultElement = getResultElement(id);
+                if(resultElement.style.display == "table-row") {
+                  resultElement.style.display = "none";
                 } else {
-                  document.getElementById(id).style.display = "table-row";
+                  resultElement.style.display = "table-row";
                 }
+              }
+            }
+
+            function showResult(id){
+              if (id.length != 0) {
+                var resultElement = getResultElement(id);
+                resultElement.style.display = "table-row";
               }
             }
 
@@ -23,88 +30,92 @@
                 rows[i].style.display = 'none';
               }
             }
+
+            function getResultElement(id) {
+              return document.getElementById('resultOf' + id);
+            }
         </script>
         <style type="text/css" onLoad="hideAll()">
             body {
-            font-family:'Open Sans', sans-serif;
-            line-height:1.5;
-            color:#3d3a37;
+                font-family:'Open Sans', sans-serif;
+                line-height:1.5;
+                color:#3d3a37;
             }
 
-            a {
-            color:#74bc00;
+            a, a:link, a:visited, a:hover, a:focus, a:active {
+                color:#000;
             }
 
             h6 {
-            color:#747270;
-            font-weight:normal;
-            }
+                color:#747270;
+                font-weight:normal;
+                }
 
             table {
-            width:90%;
-            border-collapse:collapse;
-            background-color:#e3e3e2;
-            }
+                width:90%;
+                border-collapse:collapse;
+                background-color:#e3e3e2;
+                }
 
             table th {
-            background-color:#acaba9;
-            color:#fff;
-            }
+                background-color:#acaba9;
+                color:#fff;
+                }
 
             table tr td, th {
-            border-style:solid;
-            border-width:1px;
-            border-color:#fff;
-            padding:5px;
+                border-style:solid;
+                border-width:1px;
+                border-color:#fff;
+                padding:5px;
             }
 
             table tr th {
-            text-align:left;
+                text-align:left;
             }
 
             #footer {
-            color:#747270;
+                color:#747270;
             }
 
             .right {
-            text-align:right;
+                text-align:right;
             }
 
             .collapsible {
-            cursor:pointer;
-            text-decoration:underline;
+                cursor:pointer;
+                text-decoration:underline;
             }
 
             .result {
-            margin:0 5px 20px 5px;
-            color:#3d3a37;
+                margin:0 5px 20px 5px;
+                color:#3d3a37;
             }
 
             .success {
-            background-color:green;
-            color:#fff;
+                background-color:green;
+                color:#fff;
             }
 
             .success * .ruleName:after {
-            content:" \2714";
+                content:" \2714";
             }
 
             .failure {
-            background-color:crimson;
-            color:#fff;
+                background-color:crimson;
+                color:#fff;
             }
 
             .failure * .ruleName:after {
-            content:" \2718";
+                content:" \2718";
             }
 
             .warning {
-            background-color:orange;
-            color:#fff;
+                background-color:orange;
+                color:#fff;
             }
 
             .warning * .ruleName:after {
-            content:" \0021";
+                content:" \0021";
             }
         </style>
         <h1>jQAssistant Report</h1>
@@ -198,8 +209,8 @@
 
     <!-- CONSTRAINT/CONCEPT TABLE -->
     <xsl:template match="tns:constraint | tns:concept">
-        <xsl:variable name="resultId" select="generate-id(.)"/>
-        <tr>
+        <xsl:variable name="ruleId" select="@id"/>
+        <tr id="{$ruleId}">
             <xsl:attribute name="class">
                 <xsl:choose>
                     <xsl:when test="tns:status='failure'">failure</xsl:when>
@@ -214,7 +225,7 @@
             </td>
             <td>
                 <span class="ruleName collapsible" title="{tns:description/text()}"
-                      onclick="javascript:toggle('{$resultId}');">
+                      onclick="javascript:toggleResult('{$ruleId}');">
                     <xsl:value-of select="@id"/>
                 </span>
             </td>
@@ -228,11 +239,19 @@
                 <xsl:value-of select="tns:duration/text()"/>
             </td>
         </tr>
-        <tr id="{$resultId}" style="display:none;" name="resultRow">
+        <tr id="resultOf{$ruleId}" style="display:none;" name="resultRow">
             <td colspan="5">
-                <xsl:if test="tns:result">
-                    <xsl:apply-templates select="tns:result"/>
-                </xsl:if>
+                <p>
+                    <xsl:value-of select="tns:description/text()"/>
+                </p>
+                <xsl:choose>
+                    <xsl:when test="tns:result">
+                        <xsl:apply-templates select="tns:result"/>
+                    </xsl:when>
+                    <xsl:otherwise>
+                        (no result)
+                    </xsl:otherwise>
+                </xsl:choose>
                 <xsl:if test="tns:required-concept">
                     <table>
                         <tr>
@@ -258,9 +277,6 @@
     <!-- RESULT PART -->
     <xsl:template match="tns:result">
         <div class="result">
-            <p>
-                <xsl:value-of select="../tns:description/text()"/>
-            </p>
             <table>
                 <tr>
                     <xsl:for-each select="tns:columns/tns:column">
@@ -287,10 +303,23 @@
     <xsl:template match="tns:required-concept|tns:providing-concept">
         <tr>
             <td>
-                <xsl:value-of select="@id"/>
+                <xsl:variable name="ruleId"><xsl:value-of select="@id" /></xsl:variable>
+                <a onclick="javascript:showResult('{$ruleId}'); location.href='#{$ruleId}'">
+                    <xsl:value-of select="@id"/>
+                </a>
             </td>
             <td>
-                <xsl:value-of select="tns:status"/>
+                <span class="ruleName">
+                    <xsl:attribute name="class">
+                        <xsl:choose>
+                            <xsl:when test="tns:status='failure'">failure</xsl:when>
+                            <xsl:when test="tns:status='warning'">warning</xsl:when>
+                            <xsl:when test="tns:status='success'">success</xsl:when>
+                            <xsl:otherwise></xsl:otherwise>
+                        </xsl:choose>
+                    </xsl:attribute>
+                    <xsl:value-of select="tns:status"/>
+                </span>
             </td>
         </tr>
     </xsl:template>
