@@ -11,6 +11,7 @@
 * Added support for profiles in configurations
 * Added a graph represenation of rules (`:Concept`, `:Constraint` and `:Group`) executed during analysis including result status, severities and their relations to the store
 * Fixed an issue in AbstractPluginIT where project paths containing white spaces could not be used
+* Added links to required and provided concepts in HTML report
 
 == 2.2.0
 
